--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -10,12 +10,14 @@
 		<title>Astro</title>
 	</head>
 	<body>
-		<h1>Astro</h1>
-		
-		<a href="/">Home</a>
+		<h1>Turners site of random stuff</h1>
+
+        <a href="/">Home</a>
         <a href="/about/">About</a>
         <a href="/blog/">Blog</a>
 
-		<h1>Turners site of random stuff</h1>
+        <h1>Blog Page</h1>
+        <h2>My Astro Learning Blog</h2>
+        <p>This is where I will post about my journey learning astro</p>
 	</body>
 </html>
