--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -17,6 +17,6 @@ import '../styles/global.css';
         <a href="/about/">About</a>
         <a href="/blog/">Blog</a>
 
-		<h1>Turners site of random stuff</h1>
+		<h1>Turners site of random shitty stuff</h1>
 	</body>
 </html>
