--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,30 @@
 ---
+import Hello from '../components/Hello.jsx';
+import TimeComponent from '../components/Time.jsx';
 import BaseLayout from '../layouts/BaseLayout.astro';
 const pageTitle = "Home Page";
+const learning=['Programing with Python', 'AWS basics', 'Linux', 'Basic Networking', 'Databases', 'Basic CyberSecurity', 'DevOps']
+
+const skillColor = "navy";
+const fontWeight = "bold";
+const textCase = "uppercase";
 ---
+<style define:vars={{skillColor, fontWeight, textCase}}>
+	.learnt {
+		color: var(--skillColor);
+		font-weight: car(--fontWeight);
+		text-transform: var(--textCase);
+	}
+</style>
+
 <BaseLayout pageTitle={pageTitle}>
 	<h2>My awesome blog subtitle</h2>
+	<p>Apart from pictures everything on this site has been written and created all by me. I have learnt this through the AWS Restart program held by Unitech NZ.</p>
+	<p>During my time doing this program I have learnt the following:</p>
+	<ul>
+		{learning.map((learnt) => <li class="learnt">{learnt}</li>)}
+	</ul>
+	<!-- to update serverside only -->
+	<Hello client:only="react"></Hello>
+	<TimeComponent client:only="react"></TimeComponent>
 </BaseLayout>
